chore: added license files to every package

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -8,7 +8,7 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@koppla/canvas-driver": "workspace:^",
-    "@koppla/engine": "workspace:^"
+    "@kpla/canvas-driver": "workspace:^",
+    "@kpla/engine": "workspace:^"
   }
 }
