--- a/packages/canvas-driver/package.json
+++ b/packages/canvas-driver/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@koppla/canvas-driver",
-  "version": "0.0.1",
+  "name": "@kpla/canvas-driver",
+  "version": "0.0.2",
   "type": "module",
   "main": "dist/canvas-driver.es.js",
   "exports": {
     ".": "./dist/canvas-driver.es.js"
   },
   "dependencies": {
-    "@koppla/assert": "workspace:^",
-    "@koppla/engine": "workspace:^",
-    "@koppla/signals": "workspace:^"
+    "@kpla/assert": "workspace:^",
+    "@kpla/engine": "workspace:^",
+    "@kpla/signals": "workspace:^"
   },
   "scripts": {
     "dev": "cross-env PACKAGE_NAME=canvas-driver vite build --watch --config ../../vite.config.js",
