--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@koppla/signals",
-  "version": "0.0.1",
+  "name": "@kpla/signals",
+  "version": "0.0.2",
   "type": "module",
   "main": "dist/signals.es.js",
   "exports": {
     ".": "./dist/signals.es.js"
   },
   "dependencies": {
-    "@koppla/assert": "workspace:^"
+    "@kpla/assert": "workspace:^"
   },
   "scripts": {
     "dev": "cross-env PACKAGE_NAME=signals vite build --watch --config ../../vite.config.js",
