--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,17 +1,21 @@
 {
 	"name": "@kpla/engine",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"type": "module",
 	"main": "dist/engine.es.js",
+	"types": "dist/index.d.ts",
 	"exports": {
-		".": "./dist/engine.es.js",
+		".": {
+			"import": "./dist/engine.es.js",
+			"types": "./dist/index.d.ts"
+		},
 		"./public/main.wasm": "./public/main.wasm"
 	},
 	"dependencies": {
 		"@kpla/assert": "workspace:^"
 	},
 	"scripts": {
-		"dev": "cross-env PACKAGE_NAME=engine vite build --watch --config ../../vite.config.js",
-		"build": "cross-env PACKAGE_NAME=engine vite build --config ../../vite.config.js"
+		"build": "cross-env PACKAGE_NAME=engine vite build --config ../../vite.config.js",
+		"dev": "cross-env PACKAGE_NAME=engine vite build --watch --config ../../vite.config.js"
 	}
 }
