--- a/packages/canvas-driver/package.json
+++ b/packages/canvas-driver/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@kpla/canvas-driver",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "dist/canvas-driver.es.js",
+  "types": "dist/index.d.ts",
   "exports": {
-    ".": "./dist/canvas-driver.es.js"
+    ".": {
+      "import": "./dist/canvas-driver.es.js",
+      "types": "./dist/index.d.ts"
+    }
   },
   "dependencies": {
     "@kpla/assert": "workspace:^",
@@ -12,7 +16,7 @@
     "@kpla/signals": "workspace:^"
   },
   "scripts": {
-    "dev": "cross-env PACKAGE_NAME=canvas-driver vite build --watch --config ../../vite.config.js",
-    "build": "cross-env PACKAGE_NAME=canvas-driver vite build --config ../../vite.config.js"
+    "build": "cross-env PACKAGE_NAME=canvas-driver vite build --config ../../vite.config.js",
+    "dev": "cross-env PACKAGE_NAME=canvas-driver vite build --watch --config ../../vite.config.js"
   }
 }
