feat: now including zig code in engine package

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -15,7 +15,7 @@
 		"@kpla/assert": "workspace:^"
 	},
 	"scripts": {
-		"build": "cross-env PACKAGE_NAME=engine vite build --config ../../vite.config.js",
+		"build": "./build.sh && cross-env PACKAGE_NAME=engine vite build --config ../../vite.config.js",
 		"dev": "cross-env PACKAGE_NAME=engine vite build --watch --config ../../vite.config.js"
 	}
 }
