--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm --filter demo-app... --parallel dev",
-    "build": "./build.sh && pnpm -r --filter \"./packages/**\" build",
+    "build": "pnpm -r --filter \"./packages/**\" build",
     "publish:all": "pnpm -r publish"
   },
   "devDependencies": {
