--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm --filter demo-app... --parallel dev",
+    "vaev:dev:backend": "cd apps/vaev && go tool templ generate --watch --cmd=\"go run .\"",
+    "vaev:dev": "pnpm --filter vaev build && concurrently \"pnpm --filter vaev dev\" \"pnpm run vaev:dev:backend\"",
     "build": "pnpm -r --filter \"./packages/**\" build",
+    "build:watch": "pnpm -r --parallel --filter \"./packages/**\" build --watch",
     "publish:all": "pnpm -r publish"
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
     "cross-env": "^7.0.3",
     "pnpm": "^8.0.0",
     "vite": "^5.0.0",
