fix: created a more robust dev environment for vaev

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm --filter demo-app... --parallel dev",
-    "vaev:dev:backend": "cd apps/vaev && go tool templ generate --watch --cmd=\"go run .\"",
-    "vaev:dev": "pnpm --filter vaev build && concurrently \"pnpm --filter vaev dev\" \"pnpm run vaev:dev:backend\"",
+    "vaev:dev:backend": "cd apps/vaev && cross-env APP_ENV=development go tool templ generate --watch --cmd=\"go run .\"",
+    "vaev:build:backend": "pnpm --filter vaev build && cd apps/vaev && go tool templ generate && go build -tags production -o ../../build/vaev-server .",
+    "vaev:dev": "concurrently \"pnpm --filter vaev dev\" \"pnpm run vaev:dev:backend\"",
     "build": "pnpm -r --filter \"./packages/**\" build",
     "build:watch": "pnpm -r --parallel --filter \"./packages/**\" build --watch",
     "publish:all": "pnpm -r publish"
@@ -16,6 +17,7 @@
     "cross-env": "^7.0.3",
     "pnpm": "^8.0.0",
     "vite": "^5.0.0",
-    "vite-plugin-dts": "^4.5.4"
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-static-copy": "^3.1.0"
   }
 }
