--- a/apps/vaev/package.json
+++ b/apps/vaev/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "copy-wasm": "cp ../../packages/engine/public/main.wasm ./public/main.wasm",
+    "copy-css": "cp ./frontend/css/style.css ./public/style.css",
     "dev": "vite",
     "build": "vite build"
   },
