feat: implemented web components to replace hacky wacky datastar ui junk

--- a/apps/vaev/package.json
+++ b/apps/vaev/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@kpla/canvas-driver": "workspace:^",
-    "@kpla/engine": "workspace:^"
+    "@kpla/engine": "workspace:^",
+    "@kpla/signals": "workspace:^"
   }
 }
 
